# anticheat

./: .gitignore  README.md  pom.xml
.github/workflows/: build-linux.yml
AntiCheatEngine/: CMakeLists.txt  build.bat
AntiCheatEngine/src/: Checks.cpp  Checks.h  PlayerManager.cpp  PlayerManager.h  Server.cpp  Server.h  main.cpp
src/main/java/org/anticheat/bridge/: AntiCheatBridge.java
src/main/java/org/anticheat/bridge/config/: ConfigManager.java
src/main/java/org/anticheat/bridge/context/: ContextGatherer.java
src/main/java/org/anticheat/bridge/handler/: ActionHandler.java
src/main/java/org/anticheat/bridge/listener/: FireworkListener.java  MovementListener.java  PacketListener.java
src/main/java/org/anticheat/bridge/network/: EngineClient.java  MovementData.java
src/main/java/org/anticheat/bridge/process/: EngineLauncher.java
src/main/resources/: Engine-Linux  config.yml  plugin.yml
